# draft-polli-restapi-ld-keywords

./: .bandit.yaml  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  demo.html  draft-polli-design-process.html  draft-polli-design-process.md  draft-polli-design-process.txt  draft-polli-openapi-linked-data-keywords.html  draft-polli-openapi-linked-data-keywords.md  draft-polli-openapi-linked-data-keywords.txt  draft-polli-restapi-ld-keywords.html  draft-polli-restapi-ld-keywords.md  draft-polli-restapi-ld-keywords.txt  index.html  oasld.py  pyproject.toml  requirements.txt  schemas.oas3.yaml  schemas.yaml  test_oasld.py  tox.ini
draft-polli-restapi-ld-keywords-00/: index.html
draft-polli-restapi-ld-keywords-03/: draft-polli-restapi-ld-keywords.html  draft-polli-restapi-ld-keywords.txt  index.html
draft-polli-restapi-ld-keywords-04/: index.html
draft-polli-restapi-ld-keywords-05/: draft-polli-restapi-ld-keywords.html  draft-polli-restapi-ld-keywords.txt  index.html
draft-polli-restapi-ld-keywords-07/: draft-polli-design-process.html  draft-polli-design-process.txt  draft-polli-restapi-ld-keywords.html  draft-polli-restapi-ld-keywords.txt  index.html
draft-polli-restapi-ld-keywords-08/: draft-polli-design-process.html  draft-polli-design-process.txt  draft-polli-restapi-ld-keywords.html  draft-polli-restapi-ld-keywords.txt  index.html
ioggstream-10/: draft-polli-design-process.html  draft-polli-design-process.txt  draft-polli-restapi-ld-keywords.html  draft-polli-restapi-ld-keywords.txt  index.html
ioggstream-15/: draft-polli-design-process.html  (+4 more)
(+44 files in other folders)
